<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activation_error_retry">Повторить активацию</string>
    <string name="activation_error_title">Ошибка активации!</string>
    <string name="activity_bookmark_title">ПАПКА - %1$s</string>
    <string name="activity_bookmarks_title">ПАПКИ</string>
    <string name="activity_comments_title">КОММЕНТАРИИ</string>
    <string name="adu_bug_desc">"My bug or question is…

How often does it occurs in case of a bug?

Are you using any custom / modified ROM, framework or kernel?"</string>
    <string name="adu_bug_title">%1$s (v%2$s, %3$s, %4$s, %5$s)</string>
    <string name="adu_format_blank_space">%1$s %2$s</string>
    <string name="adu_share_desc">"%1$s
http://play.google.com/store/apps/details?id=%2$s"</string>
    <string name="adu_share_to">Share via…</string>
    <string name="app_name">Kinopub</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio">АУДИО</string>
    <string name="autoplay_is_off">Автозапуск следующей серии отключен в настройках!</string>
    <string name="bookmark_delete_clean">Удалить</string>
    <string name="bookmark_delete_summary">"
Удалить фильм \"%1$s\" из папки?"</string>
    <string name="bookmark_delete_title">Удаление из папки</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="button_instructions">Click on the buttons to see how to prompt users for dynamic channels.</string>
    <string name="button_seasons">СЕЗОНЫ</string>
    <string name="button_serien">СЕРИИ</string>
    <string name="button_trailer">ТРЕЙЛЕР</string>
    <string name="button_videos">ВИДЕО</string>
    <string name="button_watch_movie">СМОТРЕТЬ ФИЛЬМ</string>
    <string name="button_watch_movie_progress">ПРОДОЛЖИТЬ C %1$s</string>
    <string name="button_watch_tv_series">СМОТРЕТЬ s%1$de%2$d</string>
    <string name="channel_added">Channel added</string>
    <string name="channel_not_added">Channel not added</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check4k_dialog_summary">"У вас не активирован режим просмотра 4K фильмов.
Это можно сделать в настройках приложения - Видеонастройки устройства."</string>
    <string name="check4k_dialog_title">4К</string>
    <string name="check4k_dialog_yes">Больше не показывать</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">046a475ff98b46cb97d7c09094e436bd</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy">Copy</string>
    <string name="default_notification_channel_id">Кинопаб</string>
    <string name="default_notification_channel_name">Канал уведомлений Кинопаб</string>
    <string name="default_web_client_id">378533457880-dca0orefn7d7k9ro6ov8m7shuq9p6t2u.apps.googleusercontent.com</string>
    <string name="delete_from_history">Удалить из истории</string>
    <string name="desc">Описание</string>
    <string name="dialog_cancel_title">Отменить</string>
    <string name="dialog_delete_bookmark_clean">Да!</string>
    <string name="dialog_delete_bookmark_summary">Удалить папку %1$s?</string>
    <string name="dialog_delete_bookmark_title">Удаление папки</string>
    <string name="dialog_error">Ошибка!</string>
    <string name="ldapi_dialog_install_brief_intro">Loader Droid is high quality download manager for Android</string>
    <string name="ldapi_dialog_update_description">If you want efficiently load your link, please update LoaderDroid</string>
    <string name="ldapi_dialog_update_help">Please go to market and update LoaderDroid there. Once it is updated, return back here and your loading will be added</string>
    <string name="menu_add_to_bookmarks">Добавить в закладки</string>
    <string name="menu_bookmarks">Закладки</string>
    <string name="menu_collections">Подборки</string>
    <string name="menu_history">Я смотрю</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_season">Сезоны</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_tv">ТВ</string>
    <string name="settings_ac3_checkbox_preference">Автовыбор ac3 аудиодорожки</string>
    <string name="settings_activity_app_title">О ПРИЛОЖЕНИИ</string>
    <string name="settings_activity_device_title">НАСТРОЙКИ УСТРОЙСТВА</string>
    <string name="settings_activity_player_title">НАСТРОЙКИ ПЛЕЕРА</string>
    <string name="settings_activity_title">НАСТРОЙКИ ИНТЕРФЕЙСА</string>
    <string name="settings_afr_checkbox_preference">Автофреймрейт</string>
    <string name="settings_cutoff_checkbox_preference">Не поддерживать вырез на экране</string>
    <string name="settings_device_name_dilaog_message">Новое название</string>
    <string name="settings_device_name_title">Название устройства</string>
    <string name="settings_device_video_settings_summary">Выберите видеонастройки</string>
    <string name="settings_device_video_settings_title">Видеонастройки устройства</string>
    <string name="settings_filter_anime_summary">Отключить аниме?</string>
    <string name="settings_filter_anime_title">Отключение аниме</string>
    <string name="settings_id">ID устройства</string>
    <string name="settings_indicator_summary">Выберите вид индикатора загрузки</string>
    <string name="settings_indicator_title">Вид индикатора загрузки</string>
    <string name="settings_list_player">Выбор плеера</string>
    <string name="settings_list_player_title">Выберите плеер</string>
    <string name="settings_list_stream_quality">Качество видео</string>
    <string name="settings_list_stream_quality_title">"Выберите качество видео
(только для HLS)"</string>
    <string name="settings_list_stream_type">Тип потока</string>
    <string name="settings_list_stream_type_title">Выберите тип потока:</string>
    <string name="settings_menu_items">Выберите отображаемые пункты меню:</string>
    <string name="settings_menu_title">Пункты бокового меню</string>
    <string name="settings_next_episode_checkbox_preference">Автозапуск следующей серии</string>
    <string name="settings_proxy_images_summary">Проксировать постеры, если их не видно?</string>
    <string name="settings_proxy_images_title">Проксировать постеры</string>
    <string name="settings_server_title">Сервер</string>
    <string name="settings_small_buffer_checkbox_preference">Небольшой буфер (для слабых устройств)</string>
    <string name="settings_start_activity_dialog_summary">Выберите стартовый экран</string>
    <string name="settings_start_activity_dialog_title">Стартовый экран</string>
    <string name="settings_statistic_always_on">Всегда показывать статистику</string>
    <string name="settings_stop_on_click_preference">Стоп/старт по OK</string>
    <string name="settings_subtitles_checkbox_preference">Настройка вида субтитров системой</string>
    <string name="settings_swipe_checkbox_preference">Отключить свайпы (яркость и громкость)</string>
    <string name="settings_unlink_device_title">Удалить привязку устройства</string>
    <string name="settings_version">Версия</string>
    <string name="text_actors">В ролях</string>
    <string name="text_collections">В подборках</string>
    <string name="text_comments">Комментарии</string>
    <string name="text_country">Страна</string>
    <string name="text_director">Режиссер</string>
    <string name="text_genre">Жанр</string>
    <string name="text_length">Длительность</string>
    <string name="text_rating_title">Рейтинг</string>
    <string name="text_similar">Похожие</string>
    <string name="text_title">Название</string>
    <string name="text_translate">Перевод</string>
    <string name="text_views">Просмотры</string>
    <string name="text_year">Год</string>
    <string name="utils_showwith">Открыть с помощью...</string>
</resources>