<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_activity_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:layout="@layout/preference_category" android:title="@string/settings_activity_device_title">
        <EditTextPreference android:title="@string/settings_device_name_title" android:key="device_name" android:summary="..." android:dialogMessage="@string/settings_device_name_dilaog_message" />
        <ListPreference android:title="@string/settings_server_title" android:key="server" android:summary="..." />
        <Preference android:id="@id/speedtest" android:title="Запустить тест скорости" android:key="speedtest" />
        <MultiSelectListPreference android:entries="@array/video_settings_menu_items" android:title="@string/settings_device_video_settings_title" android:key="device_settings" android:summary="..." android:dialogTitle="@string/settings_device_video_settings_summary" android:entryValues="@array/video_settings_menu_values" />
        <Preference android:id="@id/unlink_device" android:title="@string/settings_unlink_device_title" android:key="unlink_device" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preference_category" android:title="@string/settings_activity_title">
        <ListPreference android:entries="@array/settings_start_activity_titles" android:title="@string/settings_start_activity_dialog_title" android:key="start_activity" android:summary="@string/settings_start_activity_dialog_summary" android:defaultValue="library" android:entryValues="@array/settings_start_activity_values" />
        <MultiSelectListPreference android:entries="@array/settings_menu_items" android:title="@string/settings_menu_title" android:key="menu_items" android:summary="" android:defaultValue="@array/settings_menu_values" android:dialogTitle="@string/settings_menu_items" android:entryValues="@array/settings_menu_values" />
        <ListPreference android:entries="@array/settings_indicator_titles" android:title="@string/settings_indicator_title" android:key="indicator" android:summary="@string/settings_indicator_summary" android:defaultValue="random" android:entryValues="@array/settings_indicator_values" />
        <ListPreference android:entries="@array/settings_filter_anime_titles" android:title="@string/settings_filter_anime_title" android:key="anime" android:summary="@string/settings_filter_anime_summary" android:defaultValue="yes" android:dialogTitle="@string/settings_filter_anime_summary" android:entryValues="@array/settings_filter_anime_values" />
        <ListPreference android:entries="@array/settings_proxy_images_titles" android:title="@string/settings_proxy_images_title" android:key="proxy_images" android:summary="@string/settings_proxy_images_summary" android:defaultValue="no" android:dialogTitle="@string/settings_proxy_images_summary" android:entryValues="@array/settings_proxy_images_values" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preference_category" android:title="@string/settings_activity_player_title">
        <ListPreference android:entries="@array/settings_list_player_titles" android:id="@id/video_palyer" android:title="@string/settings_list_player" android:key="video_palyer" android:defaultValue="internal" android:dialogTitle="@string/settings_list_player_title" android:positiveButtonText="@null" android:negativeButtonText="@null" android:entryValues="@array/settings_list_player_values" />
        <ListPreference android:entries="@array/settings_list_stream_quality_titles" android:id="@id/stream_quality" android:title="@string/settings_list_stream_quality" android:key="stream_quality" android:defaultValue="best" android:dialogTitle="@string/settings_list_stream_quality_title" android:positiveButtonText="@null" android:negativeButtonText="@null" android:entryValues="@array/settings_list_stream_quality_values" />
        <ListPreference android:entries="@array/settings_list_stream_type_titles" android:id="@id/stream_type" android:title="@string/settings_list_stream_type" android:key="stream_type" android:defaultValue="hls4" android:dialogTitle="@string/settings_list_stream_type_title" android:positiveButtonText="@null" android:negativeButtonText="@null" android:entryValues="@array/settings_list_stream_type_values" />
        <CheckBoxPreference android:title="@string/settings_small_buffer_checkbox_preference" android:key="small_buffer" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/settings_afr_checkbox_preference" android:key="afr" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/settings_ac3_checkbox_preference" android:key="ac3_auto" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/settings_next_episode_checkbox_preference" android:key="next_episode" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/settings_stop_on_click_preference" android:key="stop_on_click" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/settings_statistic_always_on" android:key="statistic_always" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/settings_cutoff_checkbox_preference" android:key="cuttoff_off" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/settings_swipe_checkbox_preference" android:key="swipe_off" android:defaultValue="false" />
        <CheckBoxPreference android:id="@id/subtitles_design_by_system" android:title="@string/settings_subtitles_checkbox_preference" android:key="subtitles_design_by_system" android:defaultValue="false" />
        <Preference android:id="@id/open_subtitles_settings" android:title="Открыть системные настройки субтитров" android:key="open_subtitles_settings" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preference_category" android:title="@string/settings_activity_app_title">
        <Preference android:title="@string/settings_version" android:key="version" />
        <Preference android:id="@id/check_version" android:title="Проверить новую версию" android:key="check_version" />
        <Preference android:id="@id/changelog" android:title="Лог изменений приложения" android:key="changelog" />
        <Preference android:id="@id/clear_images" android:title="Удалить закэшированные постеры" android:key="clear_images" />
        <Preference android:id="@id/send_log" android:title="Послать лог устройства разработчику" android:key="send_log" />
        <Preference android:title="@string/settings_id" android:key="id" />
    </PreferenceCategory>
</PreferenceScreen>
