<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@android:drawable/ic_media_play" android:id="@id/play_with" android:title="@string/utils_showwith" />
    <item android:icon="@android:drawable/ic_menu_agenda" android:id="@id/add_to_bookmarks" android:title="@string/menu_add_to_bookmarks" />
    <item android:icon="@android:drawable/ic_menu_slideshow" android:id="@id/history" android:title="@string/menu_history" />
    <item android:icon="@android:drawable/ic_menu_agenda" android:id="@id/bookmarks" android:title="@string/menu_bookmarks" />
    <item android:icon="@android:drawable/ic_menu_agenda" android:id="@id/collections" android:title="@string/menu_collections" />
    <item android:icon="@android:drawable/ic_menu_agenda" android:id="@id/tv" android:title="@string/menu_tv" />
    <item android:icon="@android:drawable/ic_menu_search" android:id="@id/search" android:title="@string/menu_search" />
    <item android:icon="@android:drawable/ic_media_play" android:id="@id/season" android:title="@string/menu_season" />
    <item android:icon="@android:drawable/ic_media_play" android:id="@id/settings" android:title="@string/menu_settings" />
</menu>
