<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbarStyle="outsideOverlay" android:padding="@dimen/activity_horizontal_margin" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/layout" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="24.0sp" android:textColor="@android:color/white" android:id="@id/title_rus" android:paddingLeft="@dimen/activity_horizontal_margin" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_marginBottom="@dimen/activity_horizontal_margin" android:layout_weight="1.0" android:fontFamily="sans-serif-condensed" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingBottom="4.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/hd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1080" style="@style/AppTheme.TextAppearance.MovieOptions" />
            <Space android:id="@id/ac3_space" android:layout_width="8.0dip" android:layout_height="fill_parent" />
            <TextView android:id="@id/ac3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="AC3" style="@style/AppTheme.TextAppearance.MovieOptions" />
            <Space android:layout_width="8.0dip" android:layout_height="fill_parent" />
            <TextView android:id="@id/cc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="CC" style="@style/AppTheme.TextAppearance.MovieOptions" />
            <Space android:id="@id/cc_space" android:layout_width="8.0dip" android:layout_height="fill_parent" />
            <TextView android:id="@id/age" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" style="@style/AppTheme.TextAppearance.MovieOptions" />
            <TextView android:textSize="24.0sp" android:textColor="@android:color/white" android:id="@id/space" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:fontFamily="sans-serif-condensed" />
            <ImageButton android:layout_gravity="center" android:id="@id/seen" android:background="?selectableItemBackgroundBorderless" android:focusable="true" android:nextFocusDown="@id/comments" android:clickable="true" android:layout_width="30.0dip" android:layout_height="30.0dip" android:scaleType="fitXY" android:tint="@color/colorSecondaryText" android:nextFocusForward="@id/bookmark" app:srcCompat="@drawable/ic_eye" style="@android:style/Widget.ImageButton" />
            <Space android:layout_width="13.0dip" android:layout_height="fill_parent" />
            <ImageButton android:layout_gravity="center" android:id="@id/bookmark" android:background="?selectableItemBackgroundBorderless" android:focusable="true" android:nextFocusDown="@id/comments" android:clickable="true" android:layout_width="30.0dip" android:layout_height="30.0dip" android:scaleType="fitXY" android:tint="@color/colorSecondaryText" android:nextFocusForward="@id/download" app:srcCompat="@drawable/ic_folder" style="@android:style/Widget.ImageButton" />
            <Space android:layout_width="13.0dip" android:layout_height="fill_parent" />
            <ImageButton android:layout_gravity="center" android:id="@id/speedtest" android:background="?selectableItemBackgroundBorderless" android:focusable="true" android:nextFocusDown="@id/comments" android:clickable="true" android:layout_width="24.0dip" android:layout_height="24.0dip" android:scaleType="fitXY" android:tint="@color/colorSecondaryText" android:nextFocusForward="@id/row_comments" app:srcCompat="@drawable/ic_channel_notification_preferences_off" style="@android:style/Widget.ImageButton" />
        </LinearLayout>
        <TextView android:id="@id/description" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/AppTheme.TextAppearance.MovieInfo" />
        <TextView android:id="@id/warning" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Внимание! Присутствуют голосовые или текстовые вставки рекламы!" style="@style/AppTheme.TextAppearance.Warning" />
        <TextView android:id="@id/poor_quality" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Внимание! Фильм с сомнительным качеством картинки или звука, возможно наличие вшитых субтитров!" style="@style/AppTheme.TextAppearance.Warning" />
        <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="2" android:shrinkColumns="1">
            <TableRow android:id="@id/row_ratings">
                <TextView android:gravity="bottom" android:layout_height="fill_parent" android:text="@string/text_rating_title" style="@style/AppTheme.TextAppearance.MovieInfoTitle" />
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:gravity="bottom" android:id="@id/rating_imdb" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/AppTheme.TextAppearance.MovieInfo" />
                    <Space android:layout_width="3.0dip" android:layout_height="fill_parent" />
                    <ImageView android:id="@id/rating_imdb_icon" android:visibility="visible" android:layout_width="25.0dip" android:layout_height="25.0dip" app:srcCompat="@drawable/ic_imdb" app:tint="@color/colorSecondaryText" />
                    <Space android:layout_width="2.0dip" android:layout_height="fill_parent" />
                    <TextView android:gravity="bottom" android:id="@id/rating_kinopoisk" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/AppTheme.TextAppearance.MovieInfo" />
                    <Space android:layout_width="2.0dip" android:layout_height="fill_parent" />
                    <ImageView android:id="@id/rating_kinopoisk_icon" android:layout_width="25.0dip" android:layout_height="25.0dip" app:srcCompat="@drawable/ic_kinopoisk" app:tint="@color/colorSecondaryText" />
                    <TextView android:gravity="bottom" android:id="@id/rating_kinopub" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/AppTheme.TextAppearance.MovieInfo" />
                    <Space android:layout_width="2.0dip" android:layout_height="fill_parent" />
                    <ImageView android:id="@id/rating_kinopub_icon" android:layout_width="25.0dip" android:layout_height="25.0dip" app:srcCompat="@drawable/ic_kinopub" app:tint="@color/colorSecondaryText" />
                </LinearLayout>
            </TableRow>
            <TableRow android:id="@id/row_title">
                <TextView android:layout_height="wrap_content" android:text="@string/text_title" style="@style/AppTheme.TextAppearance.MovieInfoTitle" />
                <TextView android:id="@id/title" android:layout_height="wrap_content" style="@style/AppTheme.TextAppearance.MovieInfo" />
            </TableRow>
            <TableRow android:id="@id/row_year">
                <TextView android:layout_height="wrap_content" android:text="@string/text_year" style="@style/AppTheme.TextAppearance.MovieInfoTitle" />
                <TextView android:id="@id/year" android:layout_height="wrap_content" style="@style/AppTheme.TextAppearance.MovieInfo" />
            </TableRow>
            <TableRow android:id="@id/row_country">
                <TextView android:layout_height="wrap_content" android:text="@string/text_country" style="@style/AppTheme.TextAppearance.MovieInfoTitle" />
                <TextView android:id="@id/country" android:layout_height="wrap_content" style="@style/AppTheme.TextAppearance.MovieInfo" />
            </TableRow>
            <TableRow android:id="@id/row_genre">
                <TextView android:layout_height="wrap_content" android:text="@string/text_genre" style="@style/AppTheme.TextAppearance.MovieInfoTitle" />
                <TextView android:id="@id/genre" android:layout_height="wrap_content" style="@style/AppTheme.TextAppearance.MovieInfo" />
            </TableRow>
            <TableRow android:id="@id/row_length" android:visibility="gone">
                <TextView android:layout_height="wrap_content" android:text="@string/text_length" style="@style/AppTheme.TextAppearance.MovieInfoTitle" />
                <TextView android:id="@id/length" android:layout_height="wrap_content" style="@style/AppTheme.TextAppearance.MovieInfo" />
            </TableRow>
            <TableRow android:id="@id/row_translate">
                <TextView android:layout_height="wrap_content" android:text="@string/text_translate" style="@style/AppTheme.TextAppearance.MovieInfoTitle" />
                <TextView android:id="@id/translation" android:layout_height="wrap_content" style="@style/AppTheme.TextAppearance.MovieInfo" />
            </TableRow>
            <TableRow android:id="@id/row_comments" android:visibility="invisible">
                <TextView android:focusable="false" android:layout_height="wrap_content" android:text="@string/text_comments" style="@style/AppTheme.TextAppearance.MovieInfoTitle" />
                <TextView android:id="@id/comments" android:focusable="true" android:nextFocusUp="@id/button_play" android:nextFocusDown="@id/collections" android:layout_height="wrap_content" style="@style/AppTheme.TextAppearance.MovieInfo" />
            </TableRow>
            <TableRow android:id="@id/row_collections" android:visibility="gone">
                <TextView android:focusable="false" android:layout_height="wrap_content" android:text="@string/text_collections" style="@style/AppTheme.TextAppearance.MovieInfoTitle" />
                <TextView android:id="@id/collections" android:focusable="true" android:nextFocusUp="@id/button_play" android:nextFocusDown="@id/director" android:layout_height="wrap_content" style="@style/AppTheme.TextAppearance.MovieInfo" />
            </TableRow>
            <TableRow android:id="@id/row_director">
                <TextView android:focusable="false" android:layout_height="wrap_content" android:text="@string/text_director" style="@style/AppTheme.TextAppearance.MovieInfoTitle" />
                <TextView android:id="@id/director" android:focusable="true" android:nextFocusUp="@id/comments" android:nextFocusDown="@id/actors" android:layout_height="wrap_content" style="@style/AppTheme.TextAppearance.MovieInfo" />
            </TableRow>
            <TableRow android:id="@id/row_actors">
                <TextView android:focusable="false" android:layout_height="wrap_content" android:text="@string/text_actors" style="@style/AppTheme.TextAppearance.MovieInfoTitle" />
                <TextView android:id="@id/actors" android:focusable="true" android:nextFocusUp="@id/director" android:nextFocusDown="@id/horizontal_scroll" android:layout_height="wrap_content" style="@style/AppTheme.TextAppearance.MovieInfo" />
            </TableRow>
            <TableRow android:id="@id/row_views">
                <TextView android:layout_height="wrap_content" android:text="@string/text_views" style="@style/AppTheme.TextAppearance.MovieInfoTitle" />
                <TextView android:id="@id/views" android:layout_height="wrap_content" style="@style/AppTheme.TextAppearance.MovieInfo" />
            </TableRow>
            <TableRow android:id="@id/row_similar" android:visibility="invisible">
                <TextView android:layout_height="wrap_content" android:text="@string/text_similar" style="@style/AppTheme.TextAppearance.MovieInfoTitle" />
            </TableRow>
        </TableLayout>
        <HorizontalScrollView android:id="@id/horizontal_scroll" android:paddingLeft="@dimen/activity_horizontal_margin" android:visibility="invisible" android:nextFocusRight="@id/horizontal_scroll" android:layout_width="fill_parent" android:layout_height="wrap_content" android:nextFocusForward="@id/horizontal_scroll">
            <LinearLayout android:orientation="horizontal" android:id="@id/similar" android:nextFocusRight="@id/horizontal_scroll" android:layout_width="wrap_content" android:layout_height="wrap_content" android:nextFocusForward="@id/horizontal_scroll" />
        </HorizontalScrollView>
    </LinearLayout>
</ScrollView>
