<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:gravity="center" android:paddingLeft="5.0dip" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ldapi_dialog_update_description" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:padding="9.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ldapi_dialog_install_brief_intro" android:drawableLeft="@drawable/ld_icon" android:drawablePadding="9.0dip" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:padding="9.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ldapi_dialog_update_help" />
        <Button android:gravity="center|left" android:id="@id/btn_goto_google_play" android:paddingLeft="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="25.0dip" android:layout_marginBottom="5.0dip" android:text="Google Play" android:drawableLeft="@drawable/ic_googleplay" android:drawablePadding="15.0dip" />
        <Button android:gravity="center|left" android:id="@id/btn_goto_slideme" android:paddingLeft="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="25.0dip" android:layout_marginBottom="5.0dip" android:text="SlideMe" android:drawableLeft="@drawable/ic_slideme" android:drawablePadding="15.0dip" />
        <Button android:gravity="center" android:id="@id/btn_cancel" android:paddingLeft="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="25.0dip" android:layout_marginBottom="25.0dip" android:text="@android:string/cancel" />
    </LinearLayout>
</ScrollView>
